syntax = "proto3";

package users;

service UserService {
  rpc CreateUser(UserData) returns (UserResponseData);
  rpc CreateBusiness(BusinessData) returns (BusinessResponseData);
}

message UserData {
  string email = 1;
  string phone = 2;
  string address = 3;
  string image_url = 4;
  string password = 5;
}

message UserResponseData {
  string email = 1;
  string phone = 2;
  string address = 3;
  string image_url = 4;
  repeated string roles = 5;
  string user_id = 6;
}

message BusinessData {
  string email = 1;
  string phone = 2;
  string address = 3;
  string image_url = 4;
  string password = 5;
}

message BusinessResponseData {
  string email = 1;
  string phone = 2;
  string address = 3;
  string image_url = 4;
  string user_id = 5;
  string business_id = 6;
  repeated string roles = 7;
}
